# abandon

./: .gitignore  README.md  config.py  main.py  pyproject.toml  settings.toml
app/dao/: __init__.py  user.py
app/handler/: encoder.py  response.py
app/middleware/: auth.py  http_client.py  http_client_async.py
app/models/: __init__.py  user.py
app/routers/: request.py  user.py
app/schemas/: __init__.py  user.py
app/test/: test_config.py
app/utils/: __init__.py  log.py
web/: README.md  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/pages/: 404.vue  index.vue  login.vue
web/src/router/: index.js
